--- a/.gitignore
+++ b/.gitignore
@@ -171,3 +171,5 @@ fabric.properties
 .idea/
 Inventario/migrations/0001_initial.py
 customAuth/migrations/0001_initial.py
+Inventario/migrations/0002_delete_usuario.py
+Inventario/migrations/0003_auto_20180509_0949.py
