--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,6 @@ Inventario/migrations/0001_initial.py
 customAuth/migrations/0001_initial.py
 Inventario/migrations/0002_delete_usuario.py
 Inventario/migrations/0003_auto_20180509_0949.py
+Inventario/migrations/0002_auto_20180526_0640.py
+Inventario/migrations/0003_estadoreserva.py
+Inventario/migrations/0004_estadoreserva_fecha.py
