Fix para login de admin, esqueleto de api para la base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,4 @@ Inventario/migrations/0006_auto_20180526_0926.py
 Inventario/migrations/0007_auto_20180526_0928.py
 Inventario/migrations/0008_auto_20180526_0948.py
 Inventario/migrations/0009_auto_20180526_1330.py
+Inventario/migrations/0002_auto_20180604_0438.py
